Avoid layout shift in account setup modal

--- a/client/src/app/modal/account-setup-modal.component.scss
+++ b/client/src/app/modal/account-setup-modal.component.scss
@@ -17,7 +17,8 @@
   @include margin-right(2rem);
 
   display: block;
-  min-width: 170px;
+  width: 170px;
+  height: 220px;
 }
 
 .subtitle {
